2011-06-29  Kent Tamura  <tkent@chromium.org>

Reviewed by Alexey Proskuryakov.

        [Mac] REGRESSION (r88415): Range slider doesn't have focus appearance.
        https://bugs.webkit.org/show_bug.cgi?id=63573

        * fast/forms/input-appearance-range.html:
          Give a focus on a slider to check focus appearance.
        * platform/chromium/test_expectations.txt:
        * platform/mac/fast/forms/input-appearance-range-expected.png:
2011-06-29  Kent Tamura  <tkent@chromium.org>

        Reviewed by Alexey Proskuryakov.

        [Mac] REGRESSION (r88415): Range slider doesn't have focus appearance.
        https://bugs.webkit.org/show_bug.cgi?id=63573

        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintSliderThumb):
        Need to pass the RenderObject of the owner <input> because
        updateFocusedState() checks the outline style of the specified
        renderer, and we'd like to make a slider thumb reflect the owner
        focus style.

Canonical link: https://commits.webkit.org/79702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90436 268f45cc-cd09-0410-ab3c-d52691b4dbfc